<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mc_teal"
            android:title="@string/cart_title"
            android:titleTextColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imgCartDoctor"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/docter_nimas"
                android:contentDescription="@string/cart_doctor_name"
                android:layout_marginEnd="12dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvCartName"
                    android:text="@string/cart_doctor_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvCartSpec"
                    android:text="@string/cart_doctor_spec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvCartPrice"
                    android:text="@string/cart_price"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_checkout"
            android:backgroundTint="@color/mc_teal"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</ScrollView>
