<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8.dp"
    app:cardCornerRadius="12.dp"
    app:cardElevation="4.dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16.dp"
        android:gravity="center_vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgDoctor"
                android:layout_width="60.dp"
                android:layout_height="60.dp"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:contentDescription="@string/doctor_sample_name" />

            <View
                android:id="@+id/viewOnlineIndicator"
                android:layout_width="14.dp"
                android:layout_height="14.dp"
                android:layout_gravity="bottom|end"
                android:background="@drawable/circle_green" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="0.dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16.dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDoctorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_sample_name"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSpecialty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_sample_specialty"
                android:textColor="#757575" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_sample_price"
                android:textColor="#005CB9"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnPilih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_choose"
            android:backgroundTint="#005CB9" />

    </LinearLayout>
</androidx.cardview.widget.CardView>